# desktop-devkit

./: .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CLAUDE.md  README.md  TUTORIAL.md  pyproject.toml
examples/ex0/: glue.py  param_mappings.py  sushi_config.json  sushi_config_stomp.json
examples/ex1/: glue.py  param_mappings.py  sushi_config.json  sushi_config_stomp.json
examples/ex2/: glue.py  param_mappings.py  sushi_config.json
examples/ex3/: glue.py  param_mappings.py  sushi_config_stomp.json  sushi_presets.py
examples/ex4/: glue.py  param_mappings.py  sushi_config.json  sushi_config_stomp.json
modules/board-gui/: CLAUDE.md  README.md  main.py  pyproject.toml  quick_test.py  sensei_config.json  test_client.py
modules/board-gui/grpc_server/: regenerate_proto.py  servicer.py
modules/board-gui/gui/: encoder.py  main_window.py
modules/board-gui/sensei-grpc-api/: README.md  sensei_rpc.proto
plugins/: rename_airwindows_vst.bat
plugins/gxplugins-macos-universal/GxAxisFace.lv2/: gx_AxisFace.dylib  manifest.ttl
plugins/gxplugins-macos-universal/GxBaJaTubeDriver.lv2/: gx_bajatubedriver.dylib  manifest.ttl
plugins/gxplugins-macos-universal/GxBlueAmp.lv2/: gx_blueamp.dylib  manifest.ttl
plugins/gxplugins-macos-universal/GxBoobTube.lv2/: gx_boobtube.dylib  manifest.ttl
plugins/gxplugins-macos-universal/GxBottleRocket.lv2/: gx_bottlerocket.dylib  manifest.ttl
plugins/gxplugins-macos-universal/GxClubDrive.lv2/: gx_clubdrive.dylib  manifest.ttl
plugins/gxplugins-win/gx_DOP250.lv2/: gx_DOP250.ttl  (+1 more)
plugins/vstplugins-win/: Airwindopedia.txt  what.txt
(+400 files in other folders)
